lcb: Updated tests